--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,6 @@
         android:id="@+id/btnTwi2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="286dp"
         android:background="@null"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +23,6 @@
         android:id="@+id/btnGog2"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="286dp"
         android:background="@null"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,11 +78,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:backgroundTint="@color/white"
         android:ems="10"
-        android:hint="Email"
+        android:hint="E-mail"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
