--- a/app/src/main/res/menu/home_bnv_menu.xml
+++ b/app/src/main/res/menu/home_bnv_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:icon="@drawable/baseline_home_24" />
-    <item android:title="Item" />
-    <item android:title="Item" />
-    <item android:title="Item" />
+    <item android:icon="@drawable/baseline_search_24" />
+    <item android:icon="@drawable/baseline_favorite_24" />
+    <item android:icon="@drawable/baseline_bookmark_24" />
 </menu>
