--- a/app/src/main/res/layout/carousel_normal_item.xml
+++ b/app/src/main/res/layout/carousel_normal_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_end="462dp" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -44,12 +44,12 @@
 
     <ImageButton
         android:id="@+id/imageButton4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="48dp"
+        android:layout_height="61dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:background="@null"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
-        app:srcCompat="@drawable/red_heart_icon" />
+        app:srcCompat="@drawable/big_white_heart_icon" />
 </androidx.constraintlayout.widget.ConstraintLayout>
